# vanna-adapter

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py
vanna_adapter/: __init__.py  cli.py
